@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -42,8 +42,8 @@ import org.springframework.util.function.ThrowingConsumer;
  * AOT-processed applications as a targeted alternative to the
  * {@link org.springframework.beans.factory.annotation.AutowiredAnnotationBeanPostProcessor
  * AutowiredAnnotationBeanPostProcessor}.
- * <p>
- * When resolving arguments in a native image, the {@link Method} being used
+ *
+ * <p>When resolving arguments in a native image, the {@link Method} being used
  * must be marked with an {@link ExecutableMode#INTROSPECT introspection} hint
  * so that field annotations can be read. Full {@link ExecutableMode#INVOKE
  * invocation} hints are only required if the
@@ -69,12 +69,13 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	private AutowiredMethodArgumentsResolver(String methodName, Class<?>[] parameterTypes,
 			boolean required, @Nullable String[] shortcuts) {
 
-		Assert.hasText(methodName, "MethodName must not be empty");
+		Assert.hasText(methodName, "'methodName' must not be empty");
 		this.methodName = methodName;
 		this.parameterTypes = parameterTypes;
 		this.required = required;
 		this.shortcuts = shortcuts;
 	}
+
 
 	/**
 	 * Create a new {@link AutowiredMethodArgumentsResolver} for the specified
@@ -83,11 +84,8 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	 * @param parameterTypes the factory method parameter types
 	 * @return a new {@link AutowiredFieldValueResolver} instance
 	 */
-	public static AutowiredMethodArgumentsResolver forMethod(String methodName,
-			Class<?>... parameterTypes) {
-
-		return new AutowiredMethodArgumentsResolver(methodName, parameterTypes, false,
-				null);
+	public static AutowiredMethodArgumentsResolver forMethod(String methodName, Class<?>... parameterTypes) {
+		return new AutowiredMethodArgumentsResolver(methodName, parameterTypes, false, null);
 	}
 
 	/**
@@ -97,15 +95,12 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	 * @param parameterTypes the factory method parameter types
 	 * @return a new {@link AutowiredFieldValueResolver} instance
 	 */
-	public static AutowiredMethodArgumentsResolver forRequiredMethod(String methodName,
-			Class<?>... parameterTypes) {
-
-		return new AutowiredMethodArgumentsResolver(methodName, parameterTypes, true,
-				null);
+	public static AutowiredMethodArgumentsResolver forRequiredMethod(String methodName, Class<?>... parameterTypes) {
+		return new AutowiredMethodArgumentsResolver(methodName, parameterTypes, true, null);
 	}
 
 	/**
-	 * Return a new {@link AutowiredInstantiationArgumentsResolver} instance
+	 * Return a new {@link AutowiredMethodArgumentsResolver} instance
 	 * that uses direct bean name injection shortcuts for specific parameters.
 	 * @param beanNames the bean names to use as shortcuts (aligned with the
 	 * method parameters)
@@ -113,8 +108,7 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	 * the shortcuts
 	 */
 	public AutowiredMethodArgumentsResolver withShortcut(String... beanNames) {
-		return new AutowiredMethodArgumentsResolver(this.methodName, this.parameterTypes,
-				this.required, beanNames);
+		return new AutowiredMethodArgumentsResolver(this.methodName, this.parameterTypes, this.required, beanNames);
 	}
 
 	/**
@@ -123,11 +117,9 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	 * @param registeredBean the registered bean
 	 * @param action the action to execute with the resolved method arguments
 	 */
-	public void resolve(RegisteredBean registeredBean,
-			ThrowingConsumer<AutowiredArguments> action) {
-
-		Assert.notNull(registeredBean, "RegisteredBean must not be null");
-		Assert.notNull(action, "Action must not be null");
+	public void resolve(RegisteredBean registeredBean, ThrowingConsumer<AutowiredArguments> action) {
+		Assert.notNull(registeredBean, "'registeredBean' must not be null");
+		Assert.notNull(action, "'action' must not be null");
 		AutowiredArguments resolved = resolve(registeredBean);
 		if (resolved != null) {
 			action.accept(resolved);
@@ -141,7 +133,7 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	 */
 	@Nullable
 	public AutowiredArguments resolve(RegisteredBean registeredBean) {
-		Assert.notNull(registeredBean, "RegisteredBean must not be null");
+		Assert.notNull(registeredBean, "'registeredBean' must not be null");
 		return resolveArguments(registeredBean, getMethod(registeredBean));
 	}
 
@@ -152,8 +144,8 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	 * @param instance the bean instance
 	 */
 	public void resolveAndInvoke(RegisteredBean registeredBean, Object instance) {
-		Assert.notNull(registeredBean, "RegisteredBean must not be null");
-		Assert.notNull(instance, "Instance must not be null");
+		Assert.notNull(registeredBean, "'registeredBean' must not be null");
+		Assert.notNull(instance, "'instance' must not be null");
 		Method method = getMethod(registeredBean);
 		AutowiredArguments resolved = resolveArguments(registeredBean, method);
 		if (resolved != null) {
@@ -177,25 +169,22 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 		TypeConverter typeConverter = beanFactory.getTypeConverter();
 		for (int i = 0; i < argumentCount; i++) {
 			MethodParameter parameter = new MethodParameter(method, i);
-			DependencyDescriptor descriptor = new DependencyDescriptor(parameter,
-					this.required);
+			DependencyDescriptor descriptor = new DependencyDescriptor(parameter, this.required);
 			descriptor.setContainingClass(beanClass);
-			String shortcut = (this.shortcuts != null) ? this.shortcuts[i] : null;
+			String shortcut = (this.shortcuts != null ? this.shortcuts[i] : null);
 			if (shortcut != null) {
-				descriptor = new ShortcutDependencyDescriptor(descriptor, shortcut,
-						parameter.getParameterType());
+				descriptor = new ShortcutDependencyDescriptor(descriptor, shortcut);
 			}
 			try {
-				Object argument = autowireCapableBeanFactory.resolveDependency(descriptor,
-						beanName, autowiredBeanNames, typeConverter);
+				Object argument = autowireCapableBeanFactory.resolveDependency(
+						descriptor, beanName, autowiredBeanNames, typeConverter);
 				if (argument == null && !this.required) {
 					return null;
 				}
 				arguments[i] = argument;
 			}
 			catch (BeansException ex) {
-				throw new UnsatisfiedDependencyException(null, beanName,
-						new InjectionPoint(parameter), ex);
+				throw new UnsatisfiedDependencyException(null, beanName, new InjectionPoint(parameter), ex);
 			}
 		}
 		registerDependentBeans(beanFactory, beanName, autowiredBeanNames);
@@ -205,9 +194,8 @@ public final class AutowiredMethodArgumentsResolver extends AutowiredElementReso
 	private Method getMethod(RegisteredBean registeredBean) {
 		Method method = ReflectionUtils.findMethod(registeredBean.getBeanClass(),
 				this.methodName, this.parameterTypes);
-		Assert.notNull(method,
-				() -> String.format(
-						"Method '%s' with parameter types [%s] declared on %s",
+		Assert.notNull(method, () ->
+				"Method '%s' with parameter types [%s] declared on %s could not be found.".formatted(
 						this.methodName, toCommaSeparatedNames(this.parameterTypes),
 						registeredBean.getBeanClass().getName()));
 		return method;
