@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,8 +17,6 @@
 package org.springframework.beans.factory.aot;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
@@ -26,72 +24,63 @@ import java.util.function.Consumer;
 
 import javax.lang.model.element.Modifier;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import org.springframework.aot.generate.DefaultGenerationContext;
-import org.springframework.aot.generate.GeneratedMethods;
+import org.springframework.aot.generate.ClassNameGenerator;
 import org.springframework.aot.generate.GenerationContext;
-import org.springframework.aot.generate.InMemoryGeneratedFiles;
-import org.springframework.aot.generate.MethodGenerator;
 import org.springframework.aot.generate.MethodReference;
-import org.springframework.aot.test.generator.compile.Compiled;
-import org.springframework.aot.test.generator.compile.TestCompiler;
+import org.springframework.aot.generate.MethodReference.ArgumentCodeGenerator;
+import org.springframework.aot.hint.MemberCategory;
+import org.springframework.aot.test.generate.TestGenerationContext;
+import org.springframework.beans.factory.aot.BeanRegistrationsAotContribution.Registration;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
 import org.springframework.beans.factory.support.RegisteredBean;
 import org.springframework.beans.factory.support.RootBeanDefinition;
+import org.springframework.beans.testfixture.beans.AgeHolder;
+import org.springframework.beans.testfixture.beans.Employee;
+import org.springframework.beans.testfixture.beans.ITestBean;
 import org.springframework.beans.testfixture.beans.TestBean;
-import org.springframework.core.mock.MockSpringFactoriesLoader;
+import org.springframework.beans.testfixture.beans.factory.aot.MockBeanFactoryInitializationCode;
+import org.springframework.core.test.io.support.MockSpringFactoriesLoader;
+import org.springframework.core.test.tools.Compiled;
+import org.springframework.core.test.tools.SourceFile;
+import org.springframework.core.test.tools.TestCompiler;
+import org.springframework.javapoet.ClassName;
 import org.springframework.javapoet.CodeBlock;
-import org.springframework.javapoet.JavaFile;
 import org.springframework.javapoet.MethodSpec;
 import org.springframework.javapoet.ParameterizedTypeName;
-import org.springframework.javapoet.TypeSpec;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.aot.hint.predicate.RuntimeHintsPredicates.reflection;
 
 /**
  * Tests for {@link BeanRegistrationsAotContribution}.
  *
  * @author Phillip Webb
+ * @author Sebastien Deleuze
+ * @author Stephane Nicoll
+ * @author Brian Clozel
  */
 class BeanRegistrationsAotContributionTests {
 
-	private InMemoryGeneratedFiles generatedFiles;
+	private final DefaultListableBeanFactory beanFactory = new DefaultListableBeanFactory();
 
-	private DefaultGenerationContext generationContext;
+	private final BeanDefinitionMethodGeneratorFactory methodGeneratorFactory = new BeanDefinitionMethodGeneratorFactory(
+			AotServices.factoriesAndBeans(new MockSpringFactoriesLoader(), this.beanFactory));
 
-	private DefaultListableBeanFactory beanFactory;
+	private TestGenerationContext generationContext = new TestGenerationContext();
 
-	private MockSpringFactoriesLoader springFactoriesLoader;
+	private MockBeanFactoryInitializationCode beanFactoryInitializationCode = new MockBeanFactoryInitializationCode(this.generationContext);
 
-	private BeanDefinitionMethodGeneratorFactory methodGeneratorFactory;
-
-	private final MockBeanFactoryInitializationCode beanFactoryInitializationCode = new MockBeanFactoryInitializationCode();
-
-	@BeforeEach
-	void setup() {
-		this.generatedFiles = new InMemoryGeneratedFiles();
-		this.generationContext = new DefaultGenerationContext(this.generatedFiles);
-		this.beanFactory = new DefaultListableBeanFactory();
-		this.springFactoriesLoader = new MockSpringFactoriesLoader();
-		this.methodGeneratorFactory = new BeanDefinitionMethodGeneratorFactory(
-				new AotFactoriesLoader(this.beanFactory, this.springFactoriesLoader));
-	}
 
 	@Test
 	void applyToAppliesContribution() {
-		Map<String, BeanDefinitionMethodGenerator> registrations = new LinkedHashMap<>();
-		RegisteredBean registeredBean = registerBean(
-				new RootBeanDefinition(TestBean.class));
-		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-				this.methodGeneratorFactory, registeredBean, null,
-				Collections.emptyList());
-		registrations.put("testBean", generator);
-		BeanRegistrationsAotContribution contribution = new BeanRegistrationsAotContribution(
-				registrations);
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(TestBean.class, generator);
 		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
-		testCompiledResult((consumer, compiled) -> {
+		compile((consumer, compiled) -> {
 			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
 			consumer.accept(freshBeanFactory);
 			assertThat(freshBeanFactory.getBean(TestBean.class)).isNotNull();
@@ -99,32 +88,73 @@ class BeanRegistrationsAotContributionTests {
 	}
 
 	@Test
+	void applyToAppliesContributionWithAliases() {
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(TestBean.class, generator, "testAlias");
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		compile((consumer, compiled) -> {
+			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
+			consumer.accept(freshBeanFactory);
+			assertThat(freshBeanFactory.getAliases("testBean")).containsExactly("testAlias");
+		});
+	}
+
+	@Test
+	void applyToWhenHasNameGeneratesPrefixedFeatureName() {
+		this.generationContext = new TestGenerationContext(
+				new ClassNameGenerator(TestGenerationContext.TEST_TARGET, "Management"));
+		this.beanFactoryInitializationCode = new MockBeanFactoryInitializationCode(this.generationContext);
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(TestBean.class, generator);
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		compile((consumer, compiled) -> {
+			SourceFile sourceFile = compiled.getSourceFile(".*BeanDefinitions");
+			assertThat(sourceFile.getClassName()).endsWith("__ManagementBeanDefinitions");
+		});
+	}
+
+	@Test
 	void applyToCallsRegistrationsWithBeanRegistrationsCode() {
 		List<BeanRegistrationsCode> beanRegistrationsCodes = new ArrayList<>();
-		Map<String, BeanDefinitionMethodGenerator> registrations = new LinkedHashMap<>();
-		RegisteredBean registeredBean = registerBean(
-				new RootBeanDefinition(TestBean.class));
-		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-				this.methodGeneratorFactory, registeredBean, null,
-				Collections.emptyList()) {
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of()) {
 
 			@Override
-			MethodReference generateBeanDefinitionMethod(
-					GenerationContext generationContext,
+			MethodReference generateBeanDefinitionMethod(GenerationContext generationContext,
 					BeanRegistrationsCode beanRegistrationsCode) {
 				beanRegistrationsCodes.add(beanRegistrationsCode);
-				return super.generateBeanDefinitionMethod(generationContext,
-						beanRegistrationsCode);
+				return super.generateBeanDefinitionMethod(generationContext, beanRegistrationsCode);
 			}
 
 		};
-		registrations.put("testBean", generator);
-		BeanRegistrationsAotContribution contribution = new BeanRegistrationsAotContribution(
-				registrations);
+		BeanRegistrationsAotContribution contribution = createContribution(TestBean.class, generator);
 		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
 		assertThat(beanRegistrationsCodes).hasSize(1);
 		BeanRegistrationsCode actual = beanRegistrationsCodes.get(0);
-		assertThat(actual.getMethodGenerator()).isNotNull();
+		assertThat(actual.getMethods()).isNotNull();
+	}
+
+	@Test
+	void applyToRegisterReflectionHints() {
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(Employee.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(Employee.class, generator);
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		assertThat(reflection().onType(Employee.class)
+				.withMemberCategories(MemberCategory.INTROSPECT_PUBLIC_METHODS, MemberCategory.INTROSPECT_DECLARED_METHODS))
+				.accepts(this.generationContext.getRuntimeHints());
+		assertThat(reflection().onType(ITestBean.class)
+				.withMemberCategory(MemberCategory.INTROSPECT_PUBLIC_METHODS))
+				.accepts(this.generationContext.getRuntimeHints());
+		assertThat(reflection().onType(AgeHolder.class)
+				.withMemberCategory(MemberCategory.INTROSPECT_PUBLIC_METHODS))
+				.accepts(this.generationContext.getRuntimeHints());
 	}
 
 	private RegisteredBean registerBean(RootBeanDefinition rootBeanDefinition) {
@@ -134,45 +164,32 @@ class BeanRegistrationsAotContributionTests {
 	}
 
 	@SuppressWarnings({ "unchecked", "cast" })
-	private void testCompiledResult(
-			BiConsumer<Consumer<DefaultListableBeanFactory>, Compiled> result) {
+	private void compile(BiConsumer<Consumer<DefaultListableBeanFactory>, Compiled> result) {
+		MethodReference beanRegistrationsMethodReference = this.beanFactoryInitializationCode.getInitializers().get(0);
+		MethodReference aliasesMethodReference = this.beanFactoryInitializationCode.getInitializers().get(1);
+		this.beanFactoryInitializationCode.getTypeBuilder().set(type -> {
+			ArgumentCodeGenerator beanFactory = ArgumentCodeGenerator.of(DefaultListableBeanFactory.class, "beanFactory");
+			ClassName className = this.beanFactoryInitializationCode.getClassName();
+			CodeBlock beanRegistrationsMethodInvocation = beanRegistrationsMethodReference.toInvokeCodeBlock(beanFactory, className);
+			CodeBlock aliasesMethodInvocation = aliasesMethodReference.toInvokeCodeBlock(beanFactory, className);
+			type.addModifiers(Modifier.PUBLIC);
+			type.addSuperinterface(ParameterizedTypeName.get(Consumer.class, DefaultListableBeanFactory.class));
+			type.addMethod(MethodSpec.methodBuilder("accept")
+					.addModifiers(Modifier.PUBLIC)
+					.addParameter(DefaultListableBeanFactory.class, "beanFactory")
+					.addStatement(beanRegistrationsMethodInvocation)
+					.addStatement(aliasesMethodInvocation)
+					.build());
+		});
 		this.generationContext.writeGeneratedContent();
-		JavaFile javaFile = createJavaFile();
-		TestCompiler.forSystem().withFiles(this.generatedFiles).compile(javaFile::writeTo,
-				compiled -> result.accept(compiled.getInstance(Consumer.class),
-						compiled));
+		TestCompiler.forSystem().with(this.generationContext).compile(compiled ->
+				result.accept(compiled.getInstance(Consumer.class), compiled));
 	}
 
-	private JavaFile createJavaFile() {
-		MethodReference initializer = this.beanFactoryInitializationCode.initializers
-				.get(0);
-		TypeSpec.Builder builder = TypeSpec.classBuilder("BeanFactoryConsumer");
-		builder.addModifiers(Modifier.PUBLIC);
-		builder.addSuperinterface(ParameterizedTypeName.get(Consumer.class,
-				DefaultListableBeanFactory.class));
-		builder.addMethod(MethodSpec.methodBuilder("accept").addModifiers(Modifier.PUBLIC)
-				.addParameter(DefaultListableBeanFactory.class, "beanFactory")
-				.addStatement(initializer.toInvokeCodeBlock(CodeBlock.of("beanFactory")))
-				.build());
-		return JavaFile.builder("__", builder.build()).build();
-	}
-
-	class MockBeanFactoryInitializationCode implements BeanFactoryInitializationCode {
-
-		private final GeneratedMethods generatedMethods = new GeneratedMethods();
-
-		private final List<MethodReference> initializers = new ArrayList<>();
-
-		@Override
-		public MethodGenerator getMethodGenerator() {
-			return this.generatedMethods;
-		}
-
-		@Override
-		public void addInitializer(MethodReference methodReference) {
-			this.initializers.add(methodReference);
-		}
-
+	private BeanRegistrationsAotContribution createContribution(Class<?> beanClass,
+			BeanDefinitionMethodGenerator methodGenerator,String... aliases) {
+		return new BeanRegistrationsAotContribution(
+			Map.of(new BeanRegistrationKey("testBean", beanClass), new Registration(methodGenerator, aliases)));
 	}
 
 }
